# midi-grid

./: .gitattributes  .gitignore  .gitmodules  LICENSE.md  README.md  digital_io.bak  digital_io.sch  grid.bak  grid.sch  mcu.bak  mcu.sch  midi-grid.code-workspace  midi_grid-cache.lib  midi_grid.kicad_pcb  midi_grid.kicad_pcb-bak  midi_grid.net  midi_grid.pro  midi_grid.sch  project_library.bak  project_library.lib  psu.bak  psu.sch
Firmware/: .clang-tidy  .cproject  .mxproject  .project  CMakeLists.txt  Makefile  README.md  STM32F411RCTx_FLASH.ld  build.ninja  build_settings.json  build_settings.yaml  compile_commands.json  debug.cfg  flash  flash_using_dfu.sh  generate_build_file.py  get_version  linker_script.ld  midi-grid Debug.cfg  midi-grid.code-workspace  midi-grid.ioc  midi-grid.xml
Firmware/Drivers/FreeRTOS/: port.c
Firmware/Drivers/FreeRTOS/include/: thread.hpp
Firmware/Drivers/STM32F4xx_HAL_Driver/Inc/: stm32f4xx_hal.h
Firmware/Middlewares/USBMIDI/Inc/: usbd_midi.h
Firmware/Middlewares/USBMIDI/Src/: usbd_midi.c
Firmware/Src/: ButtonAction.h  Color.h  FreeRTOSConfig.h  ThreadConfigurations.h  Types.h  main.c  main.cpp  main.h  main.hpp  stm32f4xx_hal_conf.h  stm32f4xx_hal_msp.c  stm32f4xx_it.c  stm32f4xx_it.h  unused.cpp
Firmware/Src/application/: Application.cpp  Application.h  Application.hpp  ApplicationController.cpp  ApplicationController.h  GridTest.cpp  GridTest.h  GridTest.hpp  InternalMenu.cpp  InternalMenu.h  Launchpad.cpp  Launchpad.h  Launchpad.hpp  Snake.cpp  Snake.h  Startup.cpp  Startup.h  Startup.hpp  images.h
Firmware/Src/application/grid_test/: GridTest.cpp  GridTest.hpp
Firmware/Src/application/internal_menu/: InternalMenu.cpp  InternalMenu.hpp
Firmware/Src/application/launchpad/: Images.hpp  Launchpad.cpp  Launchpad.hpp  LcdGui.cpp  LcdGui.hpp
Firmware/Src/application/snake/: Snake.cpp  Snake.hpp
Firmware/Src/application/startup/: Startup.cpp  Startup.hpp
Firmware/Src/configs/: etl_profile.h
Firmware/Src/grid/: AdditionalButtons.cpp  AdditionalButtons.h  AdditionalButtons.hpp  Grid.cpp  Grid.h  Grid.hpp  GridControl.cpp  GridControl.h  GridDriver.cpp  GridDriver.h  GridDriver.hpp  RotaryControls.cpp  RotaryControls.h  RotaryControls.hpp  Switches.cpp  Switches.h
Firmware/Src/grid_buttons/: GridControl.cpp  GridControl.hpp  grid_buttons.c  grid_buttons.cpp  grid_buttons.h  grid_buttons.hpp  grid_buttons_configuration.c  grid_buttons_configuration.cpp  grid_buttons_configuration.h  grid_buttons_configuration.hpp  grid_buttons_init.c  grid_buttons_init.h
Firmware/Src/hal/: GlobalInterrupts.cpp  GlobalInterrupts.h  Hal.cpp  Hal.h  Time.cpp  Time.h  gpio_definitions.h  system_stm32f4xx.c
Firmware/Src/hardware/grid/: GridDriver.cpp  GridDriver.h  InputInterface.h  OutputInterface.h
Firmware/Src/hardware/lcd/: BacklightDriver.cpp  BacklightDriver.h  BacklightDriverInterface.h  Driver.cpp  Driver.h  DriverInterface.h  Spi.h  SpiInterface.h
Firmware/Src/io/: AdditionalButtons.cpp  AdditionalButtons.hpp  RotaryControls.cpp  RotaryControls.hpp
Firmware/Src/io/grid/: Grid.h  (+19 more)
Firmware/Src/lcd/: Backlight.cpp  Backlight.h  Backlight.hpp  Gui.cpp  Gui.h  Gui.hpp  Lcd.cpp  Lcd.h  Lcd.hpp  LcdControl.cpp  LcdControl.h  LcdControl.hpp  LcdDriver.cpp  LcdDriver.h  LcdDriver.hpp  font.h  gui.c  gui.cpp  gui.h  gui.hpp  images.h  lcd.c  lcd.cpp  lcd.h  lcd.hpp  progressArc.h
Firmware/Src/program/: Launchpad.cpp  Launchpad.h  launchpad.c  launchpad.cpp  launchpad.h  launchpad.hpp
Firmware/Src/system/: GlobalInterrupts.cpp  GlobalInterrupts.h  GlobalInterrupts.hpp  System.cpp  System.h  System.hpp  Time.cpp  Time.h  gpio_definitions.h  stm32f4xx_it.c  stm32f4xx_it.h
Firmware/Src/types/: ButtonAction.h  Color.cpp  Color.h  Coordinates.h
Firmware/Src/usb/: UsbMidi.cpp  UsbMidi.h  queue32.c  queue32.h  usb_device.c  usb_device.h  usbd_conf.c  usbd_desc.c  usbd_midi_if.c  usbd_midi_if.h
Firmware/middlewares/: CMakeLists.txt
Firmware/src/: CMakeLists.txt  FreeRTOSConfig.h  ThreadConfigurations.h  main.cpp  main.hpp  unused.cpp
Firmware/src/additional_buttons/: AdditionalButtons.cpp  AdditionalButtons.h  AdditionalButtonsInterface.h
Firmware/src/application/: Application.cpp  Application.hpp  images.h
Firmware/src/configs/: FreeRTOSConfig.h  ThreadConfigurations.h  etl_profile.h
Firmware/src/grid/: ButtonInput.cpp  ButtonInput.h  ButtonInputInterface.h  FlashingLeds.cpp  FlashingLeds.h  FlashingLedsInterface.h  Grid.cpp  Grid.h  GridContainer.cpp  GridContainer.h  GridInterface.h  LedOutput.cpp  LedOutput.h  LedOutputInterface.h  PulsingLeds.cpp  PulsingLeds.h  PulsingLedsInterface.h
Firmware/src/io/: HardwareInputInterface.h
Firmware/src/lcd/: Draw.cpp  Draw.h  DrawInterface.h  DriverInterface.h  Font.cpp  Font.h  Format.cpp  Format.h  Image.h  ImageMono.h  Lcd.cpp  Lcd.h  LcdInterface.h  PriorityManager.cpp  PriorityManager.h  font.h  progressArc.h
Firmware/src/log/: Log.cpp  Log.h  LogContainer.cpp  LogContainer.h  LogInterface.h  LogThread.cpp  LogThread.h  LogThreadInterface.h  info.h
Firmware/src/rotary_controls/: RotaryControls.cpp  RotaryControls.h  RotaryControlsInterface.h
Firmware/src/syslog/: Log.cpp  Log.h  LogContainer.cpp  LogContainer.h  LogInterface.h  LogThread.cpp  LogThread.h  LogThreadInterface.h  Storage.cpp  Storage.h  StorageInterface.h  info.h
Firmware/src/system/: GlobalInterrupts.cpp  GlobalInterrupts.hpp  GlobalInterruptsInterface.h  System.cpp  System.hpp  gpio_definitions.h  stm32f4xx_hal_conf.h  system_stm32f4xx.c
Firmware/src/testing/: Testing.cpp  Testing.h  TestingInterface.h
Firmware/src/types/: ButtonAction.h  Color.cpp  Color.h  Coordinates.h  Vector.h
Firmware/src/usb/: UsbMidi.cpp  UsbMidi.hpp  usb_device.c  usbd_conf.h  usbd_desc.c
Firmware/src/utilities/: atoi.cpp  atoi.h
Firmware/submodules/: CMakeLists.txt
Firmware/unit_tests/: generate.py  run  run.sh  settings.json  settings.yaml
Firmware/unit_tests/ColorTest/: ColorTest.cpp  Makefile
Firmware/unit_tests/GridPulsingLedsTest/: GridPulsingLedsTest.cpp  Makefile
Firmware/workflow_tests/: launchpad_test
(+339 files in other folders)
